# qmanager

./: .gitignore  Cargo.toml  Readme.org
resources/: qmanager.conf  qmanager.service
src/: Readme.org  clicommands.rs  cliopts.rs  daemon.rs  job_queue.rs  main.rs  protocol.rs  queue_status.rs  state.rs
