[package]
name = "qmanager"
version = "0.5.3"
authors = ["Jan Christian Kaessens <j.kaessens@ikmb.uni-kiel.de>"]

[dependencies]
clap = "2"
serde = "1"
serde_json = "1"
serde_derive = "1"
daemonize = "0.3"
native-tls = "0.2"
byteorder = "1"

tiny_http = {version = "*", features = ["ssl"]}
reqwest = "*"
nix = "*"


