[package]
name = "qmanager"
version = "0.8.4"
authors = ["Jan Christian Kaessens <j.kaessens@ikmb.uni-kiel.de>"]

[dependencies]
humantime = "2"
signal-hook = "0.1"
clap = "2"
serde = "1"
serde_json = "1"
serde_derive = "1"
daemonize = "0.4"
tiny_http = {version = "0.6", features = ["ssl"]}
reqwest = "0.9"
nix = "0.12"
config = "0.9"
structopt = "0.3"
syslog = "4"
log = "0.4"
systemd = "0.4"
simplelog = "0.7"
